--- a/dance.html
+++ b/dance.html
@@ -11,29 +11,22 @@
 document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
 
 // Check that all required assets are uploaded and up-to-date
-if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "index.css"], "outOfDate":[]};
+if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required":["museutils.js", "museconfig.js", "jquery.watch.js", "require.js", "dance.css"], "outOfDate":[]};
 </script>
   
-  <title>首頁</title>
+  <title>DANCE</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4079236376" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/dance.css?crc=33845710" id="pagesheet"/>
    </head>
  <body>
 
   <div class="clearfix borderbox" id="page"><!-- group -->
-   <div class="clearfix grpelem" id="pu135-6"><!-- group -->
-    <div class="clearfix grpelem" id="u135-6" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
-     <p id="u135-2">HSIANG-HUA CHANG</p>
-     <p id="u135-4">PORTFOLIO</p>
-    </div>
-    <div class="grpelem" id="u138"><!-- simple frame --></div>
-    <div class="grpelem" id="u141"><!-- simple frame --></div>
-    <div class="grpelem" id="u144" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="191" data-mu-ie-matrix-dy="-191"><!-- simple frame --></div>
-    <div class="grpelem" id="u147" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="191" data-mu-ie-matrix-dy="-191"><!-- simple frame --></div>
+   <div class="clip_frame grpelem" id="u120"><!-- svg -->
+    <img class="svg svg_mar" id="u118" src="images/%e8%b2%bc%e4%b8%8a%e7%9a%84-svg-1254168x884.svg?crc=3966307032" onload="this.style.height=(this.offsetWidth*700.7391640866872/1023)+'px'" alt="" data-mu-svgfallback="images/%e8%b2%bc%e4%b8%8a%e7%9a%84%20svg%201254168x884_poster_.png?crc=442245536" data-heightwidthratio="0.6852394916911045" data-image-width="1023" data-image-height="701"/>
    </div>
-   <div class="verticalspacer" data-offset-top="544" data-content-above-spacer="537" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
-   <a class="nonblock nontext clearfix grpelem" id="u154-4" href="dance.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>NEXT</p></a>
+   <div class="verticalspacer" data-offset-top="701" data-content-above-spacer="700" data-content-below-spacer="61" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+   <a class="nonblock nontext clearfix grpelem" id="u131-4" href="index.html" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content --><p>HOME</p></a>
   </div>
   <!-- Other scripts -->
   <script type="text/javascript">
